[gd_scene load_steps=34 format=2]

[ext_resource path="res://GUI/Recursos_gui/fondo.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Sprites/17-GUI/Big Text/15.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/17-GUI/Big Text/5.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/17-GUI/Big Text/9.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/17-GUI/Big Text/1.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/17-GUI/Big Text/20.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/17-GUI/Big Text/12.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/17-GUI/Big Text/8.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/17-GUI/Big Text/7.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/17-GUI/Big Text/16.png" type="Texture" id=13]
[ext_resource path="res://icon.png" type="Texture" id=14]
[ext_resource path="res://GUI/Recursos_gui/small_banner.tres" type="TileSet" id=15]
[ext_resource path="res://GUI/Recursos_gui/green_panel.tres" type="TileSet" id=16]
[ext_resource path="res://GUI/Recursos_gui/green_button.tres" type="TileSet" id=17]
[ext_resource path="res://Assets/Sprites/17-GUI/Prefabs/8.png" type="Texture" id=18]
[ext_resource path="res://Assets/Sprites/17-GUI/small_icon_white/9.png" type="Texture" id=19]
[ext_resource path="res://Assets/Sprites/17-GUI/Small Text/Small Icons/9.png" type="Texture" id=20]
[ext_resource path="res://Assets/Sprites/17-GUI/small_icon_white/salir_white.png" type="Texture" id=21]
[ext_resource path="res://Assets/Sprites/17-GUI/small_icon_white/salir_black.png" type="Texture" id=22]
[ext_resource path="res://Assets/Sprites/17-GUI/Small Text/Small Icons/7.png" type="Texture" id=23]
[ext_resource path="res://Assets/Sprites/17-GUI/small_icon_white/7.png" type="Texture" id=24]
[ext_resource path="res://Assets/Sprites/17-GUI/Small Text/Small Text/18.png" type="Texture" id=25]
[ext_resource path="res://Assets/Sprites/17-GUI/Small Text/Small Text/1.png" type="Texture" id=26]
[ext_resource path="res://Assets/Sprites/17-GUI/Small Text/Small Text/7.png" type="Texture" id=27]
[ext_resource path="res://Assets/Sprites/17-GUI/Small Text/Small Text/21.png" type="Texture" id=28]
[ext_resource path="res://Assets/Sprites/17-GUI/Small Text/Small Text/10.png" type="Texture" id=29]
[ext_resource path="res://Assets/Sprites/17-GUI/Small Text/Small Icons/19.png" type="Texture" id=30]
[ext_resource path="res://Assets/Sprites/17-GUI/small_icon_white/19.png" type="Texture" id=31]
[ext_resource path="res://Assets/Sprites/17-GUI/Small Text/Small Text/15.png" type="Texture" id=32]
[ext_resource path="res://Assets/Sprites/17-GUI/Small Text/Small Text/12.png" type="Texture" id=33]
[ext_resource path="res://Assets/Sprites/17-GUI/Small Text/Small Text/9.png" type="Texture" id=34]
[ext_resource path="res://Assets/Sprites/17-GUI/Small Text/Small Text/20.png" type="Texture" id=35]
[ext_resource path="res://GUI/Main Menu/main_menu.gd" type="Script" id=36]

[node name="main_menu" type="Node2D"]
position = Vector2( -64.0723, -28.0316 )
script = ExtResource( 36 )

[node name="fondo" parent="." instance=ExtResource( 1 )]

[node name="titulo" type="Node2D" parent="."]
position = Vector2( -40.6312, -7.62375 )
__meta__ = {
"_edit_group_": true
}

[node name="text" type="Node2D" parent="titulo"]
position = Vector2( 302.411, 90.7679 )
scale = Vector2( 4, 4 )
z_index = 1
__meta__ = {
"_edit_group_": true
}

[node name="H" type="Sprite" parent="titulo/text"]
z_index = 1
texture = ExtResource( 11 )

[node name="A" type="Sprite" parent="titulo/text"]
texture = ExtResource( 8 )
offset = Vector2( 10, 0 )

[node name="I" type="Sprite" parent="titulo/text"]
texture = ExtResource( 7 )
offset = Vector2( 20, 0 )

[node name="L" type="Sprite" parent="titulo/text"]
texture = ExtResource( 10 )
offset = Vector2( 30, 0 )

[node name="T" type="Sprite" parent="titulo/text"]
texture = ExtResource( 9 )
offset = Vector2( 50, 0 )

[node name="O" type="Sprite" parent="titulo/text"]
texture = ExtResource( 5 )
offset = Vector2( 60, 0 )

[node name="T2" type="Sprite" parent="titulo/text"]
texture = ExtResource( 9 )
offset = Vector2( 80, 0 )

[node name="H2" type="Sprite" parent="titulo/text"]
texture = ExtResource( 11 )
offset = Vector2( 90, 0 )

[node name="E" type="Sprite" parent="titulo/text"]
texture = ExtResource( 6 )
offset = Vector2( 100, 0 )

[node name="P" type="Sprite" parent="titulo/text"]
texture = ExtResource( 13 )
offset = Vector2( 120, 0 )

[node name="I2" type="Sprite" parent="titulo/text"]
texture = ExtResource( 7 )
offset = Vector2( 130, 0 )

[node name="G" type="Sprite" parent="titulo/text"]
texture = ExtResource( 12 )
offset = Vector2( 140, 0 )

[node name="banner" type="TileMap" parent="titulo"]
position = Vector2( 719.846, 0 )
scale = Vector2( 6, 6 )
tile_set = ExtResource( 15 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 65533, 0, 0, 65534, 12, 0, 65535, 12, 0, 0, 12, 0, 1, 1, 0 )

[node name="icono" type="Sprite" parent="titulo"]
position = Vector2( 941.448, 94.5791 )
scale = Vector2( 4, 4 )
texture = ExtResource( 14 )

[node name="menu_1" type="Node2D" parent="."]
z_index = 2

[node name="panel" type="TileMap" parent="menu_1"]
position = Vector2( 21.2132, -35.3553 )
scale = Vector2( 3, 3 )
tile_set = ExtResource( 16 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 131074, 0, 0, 131075, 1, 0, 131076, 2, 0, 131078, 0, 0, 131079, 1, 0, 131080, 2, 0, 196610, 3, 0, 196611, 4, 0, 196612, 5, 0, 196614, 6, 0, 196615, 7, 0, 196616, 8, 0, 262146, 6, 0, 262147, 7, 0, 262148, 8, 0 )

[node name="banner" type="Sprite" parent="menu_1"]
position = Vector2( 360.337, 257.654 )
scale = Vector2( 2.86363, 1.53809 )
texture = ExtResource( 18 )

[node name="banner2" type="Sprite" parent="menu_1"]
position = Vector2( 709.45, 251.062 )
scale = Vector2( 1.97791, 1.04742 )
texture = ExtResource( 18 )

[node name="boton_salir" type="Node2D" parent="menu_1"]
z_index = 1
__meta__ = {
"_edit_group_": true
}

[node name="texture_boton_1" type="TileMap" parent="menu_1/boton_salir"]
position = Vector2( -2881.41, -1610.13 )
scale = Vector2( 5, 5 )
z_index = -1
tile_set = ExtResource( 17 )
cell_size = Vector2( 14, 14 )
format = 1
tile_data = PoolIntArray( 1966133, 1, 0, 1966134, 2, 0, 1966135, 3, 0 )

[node name="salir" type="TextureButton" parent="menu_1/boton_salir"]
margin_left = 846.0
margin_top = 500.0
margin_right = 1025.0
margin_bottom = 539.0
texture_normal = ExtResource( 22 )
texture_pressed = ExtResource( 21 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="boton_play" type="Node2D" parent="menu_1"]
position = Vector2( 7.1272, 1.78177 )
__meta__ = {
"_edit_group_": true
}

[node name="texture_boton_2" type="TileMap" parent="menu_1/boton_play"]
position = Vector2( -1671.48, -818.667 )
scale = Vector2( 3, 3 )
tile_set = ExtResource( 17 )
cell_size = Vector2( 14, 14 )
format = 1
tile_data = PoolIntArray( 1769518, 7, 0, 1769519, 9, 0, 1835054, 13, 0, 1835055, 15, 0 )

[node name="jugar" type="TextureButton" parent="menu_1/boton_play"]
margin_left = 270.0
margin_top = 325.0
margin_right = 336.0
margin_bottom = 384.0
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 19 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="boton_info" type="Node2D" parent="menu_1"]
position = Vector2( -16.0362, 2.6727 )
__meta__ = {
"_edit_group_": true
}

[node name="texture_boton_3" type="TileMap" parent="menu_1/boton_info"]
position = Vector2( -1671.48, -818.667 )
scale = Vector2( 2, 2 )
tile_set = ExtResource( 17 )
cell_size = Vector2( 14, 14 )
format = 1
tile_data = PoolIntArray( 2687050, 7, 0, 2687051, 9, 0, 2752586, 13, 0, 2752587, 15, 0 )

[node name="info" type="TextureButton" parent="menu_1/boton_info"]
margin_left = 407.333
margin_top = 335.334
margin_right = 450.333
margin_bottom = 374.334
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 24 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="boton_tutorial" type="Node2D" parent="menu_1"]
position = Vector2( 387.093, -105.407 )
__meta__ = {
"_edit_group_": true
}

[node name="texture_boton_3" type="TileMap" parent="menu_1/boton_tutorial"]
position = Vector2( -1671.48, -818.667 )
scale = Vector2( 2, 2 )
tile_set = ExtResource( 17 )
cell_size = Vector2( 14, 14 )
format = 1
tile_data = PoolIntArray( 2687050, 7, 0, 2687051, 9, 0, 2752586, 13, 0, 2752587, 15, 0 )

[node name="tutorial" type="TextureButton" parent="menu_1/boton_tutorial"]
margin_left = 407.333
margin_top = 335.334
margin_right = 450.333
margin_bottom = 374.334
texture_normal = ExtResource( 30 )
texture_pressed = ExtResource( 31 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jugar" type="Node2D" parent="menu_1"]
position = Vector2( 300.853, 256.103 )
scale = Vector2( 5, 5 )
__meta__ = {
"_edit_group_": true
}

[node name="J" type="Sprite" parent="menu_1/jugar"]
texture = ExtResource( 29 )

[node name="U" type="Sprite" parent="menu_1/jugar"]
texture = ExtResource( 28 )
offset = Vector2( 6, 0 )

[node name="G" type="Sprite" parent="menu_1/jugar"]
texture = ExtResource( 27 )
offset = Vector2( 12, 0 )

[node name="A" type="Sprite" parent="menu_1/jugar"]
texture = ExtResource( 26 )
offset = Vector2( 18, 0 )

[node name="R" type="Sprite" parent="menu_1/jugar"]
texture = ExtResource( 25 )
offset = Vector2( 24, 0 )

[node name="tutorial" type="Node2D" parent="menu_1"]
position = Vector2( 657.637, 251.856 )
scale = Vector2( 2.5, 3 )
__meta__ = {
"_edit_group_": true
}

[node name="T" type="Sprite" parent="menu_1/tutorial"]
texture = ExtResource( 35 )

[node name="U" type="Sprite" parent="menu_1/tutorial"]
texture = ExtResource( 28 )
offset = Vector2( 6, 0 )

[node name="T2" type="Sprite" parent="menu_1/tutorial"]
texture = ExtResource( 35 )
offset = Vector2( 12, 0 )

[node name="O" type="Sprite" parent="menu_1/tutorial"]
texture = ExtResource( 32 )
offset = Vector2( 18, 0 )

[node name="R" type="Sprite" parent="menu_1/tutorial"]
texture = ExtResource( 25 )
offset = Vector2( 24, 0 )

[node name="I" type="Sprite" parent="menu_1/tutorial"]
texture = ExtResource( 34 )
offset = Vector2( 30, 0 )

[node name="A" type="Sprite" parent="menu_1/tutorial"]
texture = ExtResource( 26 )
offset = Vector2( 36, 0 )

[node name="L" type="Sprite" parent="menu_1/tutorial"]
texture = ExtResource( 33 )
offset = Vector2( 42, 0 )

[node name="musica" type="AudioStreamPlayer2D" parent="."]
[connection signal="pressed" from="menu_1/boton_salir/salir" to="." method="_on_salir_pressed"]
[connection signal="pressed" from="menu_1/boton_play/jugar" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="menu_1/boton_info/info" to="." method="_on_info_pressed"]
[connection signal="pressed" from="menu_1/boton_tutorial/tutorial" to="." method="_on_tutorial_pressed"]
